tests/sources/invalid/nullable/nullable_errors.fire
// Invalid tests: nullable errors
// EXPECT: compiler errors about invalid null usage

// Non-nullable variable initialized with null
int32 a = null; // error  //~ ERROR FS-SEM-0010 @7

// Non-nullable string initialized with null
string b = null; // error  //~ ERROR FS-SEM-0010 @8

// Non-nullable variable reassigned to null
int32 c = 5;
c = null; // error  //~ ERROR FS-SEM-0010 @1
